k8s/gogs.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gogs
  labels:
    name: gogs
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gogs
  namespace: gogs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
      - name: gogs
        image: zsoltm/gogs-armhf
        imagePullPolicy: Always
        ports:
        - containerPort: 6000
---
kind: Service
apiVersion: v1
metadata:
  name: gogs-svc
  namespace: gogs
spec:
  selector:
    app: registry
  ports:
  - name: http
    targetPort: 6000
    port: 80
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs-ingress
  namespace: gogs
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gogs.k8s.codetaming.org
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs-svc
          servicePort: 80
