k8s/indy-ingest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: indy-ingest
  labels:
    name: indy-ingest
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingest
  namespace: indy-ingest
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: ingest
        env: development
    spec:
      containers:
      - name: ingest
        image: codetaming/indy-ingest-arm
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: ingest-svc
  namespace: indy-ingest
spec:
  selector:
    app: ingest
  ports:
  - name: http
    targetPort: 9000
    port: 80
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingest-ingress
  namespace: indy-ingest
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: indy-ingest.k8s.codetaming.org
    http:
      paths:
      - path: /
        backend:
          serviceName: ingest-svc
          servicePort: 80
